colors in the textarea, list-item style, some attempts in js

--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <link rel="stylesheet" href="style.css">
     <title>Random Choices</title>
 </head>
-<body style="background-color: black;">
+<body>
 
-    <section class="randomSection" style="height: 100vh; display: flex; flex-direction: column; justify-content: center; align-items: center; color: white;">
+    <section class="randomSection">
         <h1>Enter all of the choices divided by a comma (',').
+            <br>
             Press enter when you're done</h1>
-            <textarea name="randomText" id="textarea" placeholder="Enter choices here..." style="width: 200px; height: 200px;">
+            <textarea name="randomText" id="textarea" placeholder="Enter choices here...">
 
             </textarea>
             <ul id="list">
