--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 <body>
 
     <section class="randomSection">
-        <h1>Enter all of the choices divided by a comma (',').
-            <br>
-            Press enter when you're done</h1>
-            <textarea name="randomText" id="textarea" placeholder="Enter choices here...">
-
-            </textarea>
-            <ul id="list">
-                
-            </ul>
-            <button>Reset</button>
+        <article>
+            <h1>Enter all of the choices divided by a comma (',').
+                <br>
+                Press enter when you're done</h1>
+                <textarea name="randomText" id="textarea" placeholder="Enter choices here..."></textarea>
+                <ul id="list">
+                    
+                </ul>
+                <button id="resetButton">Reset</button>
+        </article>
     </section>
     <script src="/script.js"></script>
 </body>
