--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
                 <button id="resetButton">Reset</button>
         </article>
     </section>
-    <script src="/script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
